objects/Opp_System_Activity_Type__mdt.object
<CustomObject>
    <label>Opp System Activity Type</label>
    <pluralLabel>Opp System Activity Types</pluralLabel>
    <fields>
        <fullName>Opp_Date_Field__c</fullName>
        <label>Opp Date Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Field__c</fullName>
        <description>Field Name in Opportunity object that contains Activity Type Value</description>
        <inlineHelpText>Field Name in Opportunity object that contains Activity Type Value</inlineHelpText>
        <label>Activity Type Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Value__c</fullName>
        <label>Activity Type Value</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_Name__c</fullName>
        <label>Opp Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Task_Opp_Field__c</fullName>
        <description>Field Name in Opportunity object that contains UserId to whom the new Task is assigned to.</description>
        <inlineHelpText>Field Name in Opportunity object that contains UserId to whom the new Task is assigned to.</inlineHelpText>
        <label>Assign Task Opp Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Record_Type_Name__c</fullName>
        <label>Task Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Task_to_Current_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Task to Current User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>